force-app/main/default/objects/Negoptim__Contract_Discount__c/Negoptim__Contract_Discount__c.object-meta.xml
<CustomObject>
    <label>Contract Discount</label>
    <nameField>
        <displayFormat>DISC{0}</displayFormat>
        <label>Contract Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>