force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__all_BU__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__all_BU__c</fullName>
    <defaultValue>true</defaultValue>
    <label>all BU</label>
    <type>Checkbox</type>
</CustomField>