force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__all_items__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__all_items__c</fullName>
    <defaultValue>true</defaultValue>
    <label>all items</label>
    <type>Checkbox</type>
</CustomField>