force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Already_Invoiced_Edited__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Already_Invoiced_Edited__c</fullName>
    <label>Already Invoiced &amp; Edited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>