force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Asynchron_Processing__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Asynchron_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asynchron Processing</label>
    <type>Checkbox</type>
</CustomField>