force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Balance_Base__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Balance_Base__c</fullName>
    <description>Calculation model used for Balance Invoicing</description>
    <label>Balance Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Database_origin</valueSetName>
    </valueSet>
</CustomField>