force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Base_Calculation_Model__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Base_Calculation_Model__c</fullName>
    <inlineHelpText>TO w/o VAT (Order)  Regular purchases with return without VAT (Order date)
TO w/o VAT (Deliv.) - Regular purchases with return without VAT (Delivery date)
TO w/o Return (Deliv) - Regular purchases without return without VAT (Delivery date)</inlineHelpText>
    <label>Base Calculation Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Calcualtion_method</valueSetName>
    </valueSet>
</CustomField>