force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Base_Quantity_Actual_1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Base_Quantity_Actual_1__c</fullName>
    <label>Base Quantity Actual-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>