force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Base_Quantity_Balanced__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Base_Quantity_Balanced__c</fullName>
    <label>Base Quantity Balanced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>