force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Base_Redistribution_Model__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Base_Redistribution_Model__c</fullName>
    <description>Select redistribution criteria should be applied for the condition line</description>
    <inlineHelpText>Select redistribution criteria should be applied for the condition line</inlineHelpText>
    <label>Base Redistribution Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Base_Redistribution_Model</valueSetName>
    </valueSet>
</CustomField>