force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Base_SellOut_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Base_SellOut_Dispatch__c</fullName>
    <label>Base Sell Out Dispatch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>