force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Base_TO_Actual__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Base_TO_Actual__c</fullName>
    <description>Purchases calculation base for condition in percent based on the Nego Scope, BU Scope and date filter.
The field is automatically felt by trigger.</description>
    <inlineHelpText>Purchases calculation base for condition in percent based on the Nego Scope, BU Scope and date filter.
The field is automatically felt by trigger.</inlineHelpText>
    <label>Base TO Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>