force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Base_TO_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Base_TO_Forecast__c</fullName>
    <label>Base TO Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>