force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__BU_Commercial_Name__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__BU_Commercial_Name__c</fullName>
    <label>BU Commercial Name</label>
    <type>TextArea</type>
</CustomField>