force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__comments__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>