force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__commercial_reference__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__commercial_reference__c</fullName>
    <label>Commercial reference</label>
    <type>TextArea</type>
</CustomField>