force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Condition_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Name of the condition coming for Tariff conditions list</description>
    <inlineHelpText>Nom de la condition tarifaire</inlineHelpText>
    <label>Condition Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Condition_Type__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Negoptim__Pol_Com_Condition__c.Negoptim__Nego_Discount_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Negoptim__Nego_Discount_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Pol_Com_Condition__c</referenceTo>
    <relationshipName>Contract_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>