force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Contract__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Negoptim__Contract__c</referenceTo>
    <relationshipName>Contract_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>