force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Contract_Group__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Contract_Group__c</fullName>
    <description>Field if coming for Group Contract download</description>
    <inlineHelpText>Field if coming for Group Contract download</inlineHelpText>
    <label>Contract Group Reference</label>
    <type>TextArea</type>
</CustomField>