force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Contract_NS_id__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Contract_NS_id__c</fullName>
    <formula>Negoptim__Contract__r.Negoptim__Supplier_Nego_Scope__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract NS id</label>
    <type>Text</type>
</CustomField>