force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Deletion_Action_Executed__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Deletion_Action_Executed__c</fullName>
    <label>Deletion Action Executed</label>
    <type>TextArea</type>
</CustomField>