force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Disc_BDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Disc_BDate__c</fullName>
    <defaultValue>Date(YEAR(Today()),1,1)</defaultValue>
    <label>Begin Date</label>
    <type>Date</type>
</CustomField>