force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Disc_BDate_Y2__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Disc_BDate_Y2__c</fullName>
    <label>Begin Date Y2</label>
    <type>Date</type>
</CustomField>