force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Disc_EDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Disc_EDate__c</fullName>
    <defaultValue>Date(YEAR(Today()),12,31)</defaultValue>
    <label>End Date</label>
    <type>Date</type>
</CustomField>