force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Disc_EDate_Y1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Disc_EDate_Y1__c</fullName>
    <label>End Date Y1</label>
    <type>Date</type>
</CustomField>