force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Display_Order__c</fullName>
    <description>Use to define order of conditions displayed in the grid (Condition grid, Negotiated matrix, condition related list, report....) . Managed following client rules</description>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>