force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Down_Payment_YE_Value_Reference__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Down_Payment_YE_Value_Reference__c</fullName>
    <description>Save Down Payment value used as reference. Formally,  it&apos;s corresponding to the calculated value that should be applied for each Down payment sequence (for Ex, 110,000 with 11 sequences give 110,000/11 = 10,000).</description>
    <inlineHelpText>Le montant de l&apos;acompte se calcule en fonction du nombre d&apos;acomptes interprété dans la colonne &quot;Période de facturation&quot;</inlineHelpText>
    <label>Down Payment YE Value Reference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>