force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Exclusion_To_NegoBase_Justif__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Exclusion_To_NegoBase_Justif__c</fullName>
    <label>Exclusion to Nego Base Justif</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>