force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Ext_Synchro_Status__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ext_Synchro_Status__c</fullName>
    <label>External Synchro Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Ext_Synchro_Status</valueSetName>
    </valueSet>
</CustomField>