force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__financial_reference__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__financial_reference__c</fullName>
    <label>Financial reference</label>
    <type>TextArea</type>
</CustomField>