force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__first_invoice_date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__first_invoice_date__c</fullName>
    <label>Invoice First date</label>
    <type>Date</type>
</CustomField>