force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Fist_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Fist_Provision_Date__c</fullName>
    <label>Provision First date</label>
    <type>Date</type>
</CustomField>