force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__FlatPrice_Rate_Correction__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__FlatPrice_Rate_Correction__c</fullName>
    <formula>IF ( NOT(Negoptim__Is_Tariff_Condition__c) &amp;&amp; NOT(Negoptim__Is_FlatPrice_Condition__c) &amp;&amp; (Negoptim__Index__c = &apos;Index2&apos;)
, - Negoptim__YTD_Nego__c / Negoptim__Contract__r.Negoptim__Total_TO__c ,

IF ( NOT(Negoptim__Is_Tariff_Condition__c) &amp;&amp; Negoptim__Is_FlatPrice_Condition__c &amp;&amp; (Negoptim__Index__c = &apos;Index1&apos;)
, Negoptim__Index_perc__c * (1-Negoptim__Contract__r.Negoptim__Index2_perc__c-Negoptim__Contract__r.Negoptim__Index3_perc__c - Negoptim__Contract__r.Negoptim__Index4_perc__c) ,

NULL

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FlatPrice Rate Correction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>