force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Index__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Index__c</fullName>
    <formula>text(Negoptim__Condition_Type__r.Negoptim__Index__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index</label>
    <type>Text</type>
</CustomField>