force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__index_v2__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__index_v2__c</fullName>
    <label>index v2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Index1</fullName>
            </value>
            <value>
                <fullName>Index2</fullName>
            </value>
            <value>
                <fullName>Index3</fullName>
            </value>
            <value>
                <fullName>Index4</fullName>
            </value>
            <value>
                <fullName>Index5</fullName>
            </value>
            <value>
                <fullName>Index6</fullName>
            </value>
            <value>
                <fullName>Index7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>