force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Integration_Date_Last__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Integration_Date_Last__c</fullName>
    <label>Last Integration Date</label>
    <type>DateTime</type>
</CustomField>