force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Invoice_period__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Invoice_period__c</fullName>
    <description>Specify the periodicity for invoicing</description>
    <inlineHelpText>Fréquence de facturation</inlineHelpText>
    <label>Invoice period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Periodicity</valueSetName>
    </valueSet>
</CustomField>