force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Invoice_Planning_Short_Summary__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Invoice_Planning_Short_Summary__c</fullName>
    <label>Invoice Planning Short Summary</label>
    <type>TextArea</type>
</CustomField>