force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Invoice_sequence__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Invoice_sequence__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Invoice sequence</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>