force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Invoicing_plan_generated__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Invoicing_plan_generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Give info if the planning of invoice has been generated for the condition. If the user will chek, automatic planning of invoicing will be generated based on the condition invoicing criteria</description>
    <inlineHelpText>Give info if the planning of invoice has been generated for the condition. If the user will chek, automatic planning of invoicing will be generated based on the condition invoicing criteria</inlineHelpText>
    <label>Invoicing Plan Generated</label>
    <type>Checkbox</type>
</CustomField>