force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Invoicing_Planning_Summary__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Invoicing_Planning_Summary__c</fullName>
    <description>Specify invoicing summary (Month / Value)</description>
    <label>Invoicing Planning Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>