force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Is_AggregatedFromMove__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_AggregatedFromMove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Aggregated From Move</label>
    <type>Checkbox</type>
</CustomField>