force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Is_Conditional__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_Conditional__c</fullName>
    <description>Attribute to know if condition is conditional.
(used for example in slab)</description>
    <formula>Negoptim__Condition_Type__r.Negoptim__Is_Conditional__c == true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Conditional</label>
    <type>Checkbox</type>
</CustomField>