force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Is_Duplicable_PE__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_Duplicable_PE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is duplicable exception in case of contract duplication to contract with Period Extension record type</description>
    <label>Is Duplicable PE</label>
    <type>Checkbox</type>
</CustomField>