force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Is_Edited__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_Edited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Edited</label>
    <type>Checkbox</type>
</CustomField>