force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Is_Excluded_To_NegoBase__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_Excluded_To_NegoBase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not consider in the Nego Base aggregation</description>
    <inlineHelpText>Check to not consider in the Nego Base aggregation</inlineHelpText>
    <label>Is Excluded to Nego Base</label>
    <type>Checkbox</type>
</CustomField>